--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -3,7 +3,7 @@
     <mat-card-title>Login</mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <form class="example-form">
+    <form>
       <mat-form-field appearance="fill">
         <mat-label>Username</mat-label>
         <label>
