--- a/front/src/app/pages/login/login.component.html
+++ b/front/src/app/pages/login/login.component.html
@@ -13,7 +13,7 @@
       <mat-form-field appearance="fill">
         <mat-label>Password</mat-label>
         <label>
-          <input matInput placeholder="Ex. code4life" #password>
+          <input matInput type="password" placeholder="Ex. code4life" #password>
         </label>
       </mat-form-field>
     </form>
