--- a/front/src/app/components/compatibility/compatibility.component.html
+++ b/front/src/app/components/compatibility/compatibility.component.html
@@ -1,6 +1,6 @@
 <mat-card>
   <mat-card-content>
-    <div class="justify-end">
+    <div class="justify-between">
       <mat-card-title>{{ user.name }}</mat-card-title>
       <div class="right-side">
         <div class="compatibility">
