--- a/front/src/app/pages/home/home.component.scss
+++ b/front/src/app/pages/home/home.component.scss
@@ -1,4 +1,17 @@
 :host {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.mat-card {
+  width: 60vw;
+  margin: 20px;
+}
+
+.justify-between {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
