--- a/front/src/app/components/questions/questions.component.html
+++ b/front/src/app/components/questions/questions.component.html
@@ -19,7 +19,7 @@
     <div class="text">
       <ng-template matStepLabel>Done</ng-template>
       <h2> Are you satisfied with your profile submission? </h2>
-      <button mat-flat-button color="primary">Submit</button>
+      <button mat-flat-button color="primary" (click)="submit()">Submit</button>
     </div>
   </mat-step>
 </mat-horizontal-stepper>
