--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,1 +1,10 @@
+<mat-toolbar>
+  <mat-toolbar-row>
+    <span>Fuzzy Match Maker</span>
+    <span class="spacer"></span>
+    <button mat-stroked-button color="accent" [routerLink]="['/home']">Home</button>
+    <button mat-stroked-button color="accent" [routerLink]="['/login']">Login</button>
+    <button mat-stroked-button color="accent" [routerLink]="['/questions']">Questions</button>
+  </mat-toolbar-row>
+</mat-toolbar>
 <router-outlet></router-outlet>
