--- a/front/src/app/components/compatibility/compatibility.component.html
+++ b/front/src/app/components/compatibility/compatibility.component.html
@@ -4,8 +4,8 @@
       <mat-card-title>{{ user.name }}</mat-card-title>
       <div class="right-side">
         <div class="compatibility">
-          <p>They Match You: {{ user.compatibilityWithUser }}</p>
-          <p>You Match Them: {{ user.compatibilityWithThem }}</p>
+          <p>They Match You: {{ user.compatibilityWithUser | percent }}</p>
+          <p>You Match Them: {{ user.compatibilityWithThem | percent }}</p>
         </div>
         <button mat-stroked-button color="accent"> VIEW </button>
       </div>
